Fix $gap and $column-gap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,8 +2,8 @@
 ---
 
 $spacing-values: ("0": 0, "1": 5px, "2": 10px, "3": 20px, "4": 40px, "5": 80px, "6": 160px, "auto": auto);
-$gap: 80px;
-$column-gap: 40px;
+$gap: 40px;
+$column-gap: 20px;
 $section-padding: 40px 20px;
 $hero-body-padding: $section-padding;
 $footer-padding: $section-padding;
